--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@ satragraha campaigns and his philosophy of nonviolent resistance. Gandhi’s
 philosophy has inspired many of the most famous resistance movements of the
 twentieth century — for example, the U.S. civil rights movement led by Dr. Martin
 Luther King, Aung San Suu Kyi’s pro-democracy movement against the military
-4
-junta of Myanmar, and the movement to end the apartheid in South Africa led by
-Nelson Mandela.</p>
+4 junta of Myanmar, and the movement to end the apartheid in South Africa led by
+Nelson Mandela
+.</p>
 </ul>  </body>
 
 </html>
